 Nov 04/2007
=======================
+ removed "params" option (not needed, see below)
+ renamed "path" option to "mame"
+ renamed "snaps" option to "snap"
+ "mame" and "snap" path options must contain the '%r' specifier which will
  be replaced with the short rom name.  this removes the need for the params
  option since the "mame" path can contain command line switches.
+ dissable sdl mouse cursor
+ enabled key repeat (default delay/interval)

 Oct  01/2007
=======================
+ made option files completely optional
+ added build parameter to set default font
+ added build step to convert default font into static resource
+ moved snapshot finding logic to the game and menu classes

 Sept 26/2007
=======================
+ added options for customizing font colors, snapshot delay,
  and snapshot alpha blending
+ removed unused rompath option since this can be set via
  the mame params option
+ added check for config directory override in config.h
+ moved exception class to it's own header file

0.0.3
-------------------

- made a windows version

0.0.2
-------------------

- fixed snap shot generation, generates numbered snaps
- added hidden menu and games. prefix name with a '.'

0.0.1 - Feb 24/2003
-------------------

- initial version